# ODE-tests

./: .gitignore  CMakeLists.txt  bench  maq  readme.md  run
include/: defs.hpp  dop853coefs.hpp  methods.hpp  odes.hpp  system.hpp  system2.hpp  vec3.hpp
include/methods/: euler.hpp
scripts/: anim.py  bench.py  gen_pdf.py  haha.css  requirements.txt  test.py
src/: CMakeLists.txt  bench.cpp  dop853_ref.cpp  main.cpp  main2.cpp  methods.cpp  odes.cpp  odes_opt.cpp  system.cpp  system2.cpp
src/methods/: euler.cpp
visu/: anim.py  test.py
